<resources>
    <string name="app_name" translatable="false">Acpnctr</string>
    <string name="date_format_not_valid">Please enter a valid date</string>
    <string name="search_client_hint">Search client</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="tos_dialog_title">Terms of service</string>
    <string name="tos_url">&lt;a href="https://acpnctr.com/conditions-generales-utilisation/">I have read and agree to the Terms of service&lt;/a></string>
    <string name="tos_pos_button">Confirm</string>
    <string name="tos_neg_button">Decline</string>
    <string name="tos_accepted">Welcome to Acpnctr!</string>
    <string name="delete_data_failed">Couldn\'t delete item</string>
    <string name="delete_data_message">Are you sure you want to delete this item?</string>
    <string name="delete_data_confirm">Delete</string>
    <string name="delete_data_cancel">Cancel</string>
    <string name="auth_signed_in">Signed in!</string>
    <string name="auth_signed_out">You\'ve successfully signed out</string>
    <string name="auth_sign_in_cancelled">Signed in cancelled</string>
    <string name="auth_no_network">Couldn\'t connect to network</string>
    <string name="auth_unknown_error">Something went wrong :/</string>
    <string name="auth_ooops" translatable="false">Ooops…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_account">Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_signout">Sign out</string>
    <string name="search_title">Search</string>
    <string name="title_activity_client">Client file</string>
    <string name="title_activity_session">Session</string>
    <string name="title_client_information">Information</string>
    <string name="title_anamnesis">Anamnesis</string>
    <string name="title_history">Sessions</string>
    <string name="title_four_steps">4 steps</string>
    <string name="title_energetics_diagnosis">Diagnosis</string>
    <string name="title_treatment">Treatment</string>
    <string name="client_list_empty_view_title_text">You don\'t have any client yet</string>
    <string name="client_list_empty_view_subtitle_text">Start creating one with the button below</string>
    <string name="client_information_category_overview">Overview</string>
    <string name="client_information_category_gender">Gender*</string>
    <string name="client_information_category_acquisition">Acquisition</string>
    <string name="hint_client_information_name">name*</string>
    <string name="hint_client_information_dob">dob (dd/mm/yyyy)*</string>
    <string name="hint_client_information_phone">phone</string>
    <string name="hint_client_information_email">email</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="acquisition_unknown">Unknown</string>
    <string name="acquisition_wom">Word of mouth</string>
    <string name="acquisition_website">Website</string>
    <string name="acquisition_facebook">Facebook</string>
    <string name="acquisition_confrere">Confrere</string>
    <string name="acquisition_offline">Offline</string>
    <string name="action_save">Save</string>
    <string name="client_info_insert_failed">Error saving client</string>
    <string name="client_info_insert_successful">Client saved</string>
    <string name="client_info_name_needed">Please enter a name</string>
    <string name="client_info_gender_needed">Please choose a gender</string>
    <string name="client_info_dob_needed">Please enter a DOB</string>
    <string name="client_info_update_failed">Error updating client</string>
    <string name="client_info_update_successful">Client updated</string>
    <string name="new_client_not_saved">Please save new client first</string>
    <string name="client_anam_no_history">Please enter a history</string>
    <string name="generic_data_insert_failed">Error adding data</string>
    <string name="generic_data_load_failed">Error loading data</string>
    <string name="sessions_list_load_failed">Error loading sessions list</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="clients_list_error">Error loading clients list</string>
    <string name="date_hint">date (dd/mm/yyyy)</string>
    <string name="history_hint">history*</string>
    <string name="btn_add">add</string>
    <string name="anam_empty_date" translatable="false">#</string>
    <string name="session_saved">Session saved</string>
    <string name="hint_session_goal">session goal*</string>
    <string name="session_date_needed">Please enter a date</string>
    <string name="session_goal_needed">Please enter a goal</string>
    <string name="session_rated_no_improvement">Session rated: No Improvement</string>
    <string name="session_rated_small_improvement">Session rated: Small Improvement</string>
    <string name="session_rated_good_improvement">Session rated: Good Improvement</string>
    <string name="session_rated_total_improvement">Session rated: Total Improvement</string>
    <string name="session_rated_failed">Error rating session</string>
    <string name="session_update_success">Session saved</string>
    <string name="session_update_failed">Error updating session</string>
    <string name="hint_treatment_point">e.g. DM 20 - baihui</string>
    <string name="session_not_saved">Please save new session first</string>
    <string name="treatment_invalid_point">Please choose a point from the list</string>
    <string name="stimulation_tonification">tonification</string>
    <string name="stimulation_sedation">sedation</string>
    <string name="stimulation_neutral">neutral</string>
    <string name="laterality_bilateral">bilateral</string>
    <string name="laterality_left">left</string>
    <string name="laterality_right">right</string>
    <string name="treatment_list_error">Error loading treatment</string>
    <string name="diag_bagang_label">Ba Gang</string>
    <string name="btn_diag_bagang">ba gang</string>
    <string name="diag_bagang_yin">yin</string>
    <string name="diag_bagang_yang">yang</string>
    <string name="diag_bagang_deficiency">deficiency</string>
    <string name="diag_bagang_excess">excess</string>
    <string name="diag_bagang_cold">cold</string>
    <string name="diag_bagang_heat">heat</string>
    <string name="diag_bagang_interior">interior</string>
    <string name="diag_bagang_exterior">exterior</string>
    <string name="diag_bagang_saved">Ba Gang saved</string>
    <string name="diag_bagang_reset_btn">Reset</string>
    <string name="label_five_phases">5 phases</string>
    <string name="btn_diag_wu_xing">5 phases</string>
    <string name="diag_5_phases_wood_earth">wood attacks earth (ko)</string>
    <string name="diag_5_phases_wood_metal">wood attacks metal (rae)</string>
    <string name="diag_5_phases_fire_metal">fire attacks metal (ko)</string>
    <string name="diag_5_phases_fire_water">fire attacks water (rae)</string>
    <string name="diag_5_phases_earth_water">earth attacks water (ko)</string>
    <string name="diag_5_phases_earth_wood">earth attacks wood (rae)</string>
    <string name="diag_5_phases_metal_wood">metal attacks wood (ko)</string>
    <string name="diag_5_phases_metal_fire">metal attacks fire (rae)</string>
    <string name="diag_5_phases_water_fire">water attacks fire (ko)</string>
    <string name="diag_5_phases_water_earth">water attacks earth (rae)</string>
    <string name="diag_5_phases_saved">5 phases saved</string>
    <string name="diag_saved">Diagnosis saved</string>
    <string name="label_questionnaire">Questionnaire</string>
    <string name="btn_questionnaire">Questionnaire</string>
    <string name="quest_yin_yang">Yin Yang</string>
    <string name="quest_5_phases">5 phases</string>
    <string name="quest_diet">Diet</string>
    <string name="quest_digestion">Digestion</string>
    <string name="quest_way_of_life">Way of life</string>
    <string name="quest_sleep">Sleep</string>
    <string name="quest_symptoms">Symptoms</string>
    <string name="quest_medication">Medication</string>
    <string name="quest_events">Events</string>
    <string name="quest_emotional">Emotions</string>
    <string name="quest_psychological">Psychology</string>
    <string name="quest_gynecological">Gynecology</string>
    <string name="questionnaire_saved">Questionnaire saved</string>
    <string name="label_observation">Observation</string>
    <string name="btn_observation">Observation</string>
    <string name="obs_behaviour">Behaviour</string>
    <string name="obs_tongue">Tongue</string>
    <string name="obs_lips">Lips</string>
    <string name="obs_limb">Limb</string>
    <string name="obs_meridian">Meridian</string>
    <string name="obs_morphology">Morphology</string>
    <string name="obs_nails">Nails</string>
    <string name="obs_skin">Skin</string>
    <string name="obs_hairiness">Hairiness</string>
    <string name="obs_complexion">Complexion</string>
    <string name="obs_eyes">Eyes</string>
    <string name="observation_saved">Observation saved</string>
    <string name="label_auscultation">Auscultation</string>
    <string name="btn_auscultation">Auscultation</string>
    <string name="ausc_blood_pressure">Blood pressure</string>
    <string name="ausc_abdomen">Abdomen</string>
    <string name="ausc_smell">Smell</string>
    <string name="ausc_breathing">Breathing</string>
    <string name="ausc_cough">Cough</string>
    <string name="ausc_voice">Voice</string>
    <string name="auscultation_saved">Auscultation saved</string>
    <string name="label_palpation">Palpation</string>
    <string name="btn_palpation">Palpation</string>
    <string name="palp_abdomen">Abdomen</string>
    <string name="palp_meridian">Meridian</string>
    <string name="palp_point">Point</string>
    <string name="palpation_saved">Palpation saved</string>
    <string name="label_pulses">Pulses</string>
    <string name="btn_pulses">Pulses</string>
    <string name="pulses_eurythmy_title">Eurythmy</string>
    <string name="pulses_eurythmy_value_label">Eurythmy:</string>
    <string name="pulses_beatpm_hint">Beat Per Min</string>
    <string name="pulses_breathpm_hint">Breath Per Min</string>
    <string name="pulses_beat_per_breath_label">beats / breath</string>
    <string name="pulses_eurythmy_no_value">Please enter values for eurythmy</string>
    <string name="pulses_28_types_title">28 Types</string>
    <string name="pulses_28_types_value_label">Pulse types:</string>
    <string name="pulses_28_types_feou" translatable="false">Feou</string>
    <string name="pulses_28_types_feou_transl">Superficial</string>
    <string name="pulses_28_types_roa" translatable="false">Roa</string>
    <string name="pulses_28_types_roa_transl">Slippery</string>
    <string name="pulses_28_types_che" translatable="false">Che</string>
    <string name="pulses_28_types_che_transl">Full</string>
    <string name="pulses_28_types_rong" translatable="false">Rong</string>
    <string name="pulses_28_types_rong_transl">Surging</string>
    <string name="pulses_28_types_tsin" translatable="false">Tsin</string>
    <string name="pulses_28_types_tsin_transl">Tight</string>
    <string name="pulses_28_types_kreou" translatable="false">Kreou</string>
    <string name="pulses_28_types_kreou_transl">Hollow</string>
    <string name="pulses_28_types_sien" translatable="false">Sien</string>
    <string name="pulses_28_types_sien_transl">Taut</string>
    <string name="pulses_28_types_tchin" translatable="false">Tchin</string>
</resources>