<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.acpnctr.acpnctr.QuestionnaireActivity">

        <EditText
            android:id="@+id/et_quest_yinyang"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_yin_yang"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_5_phases"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_5_phases"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_diet"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_diet"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_digestion"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_digestion"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_way_of_life"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_way_of_life"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_sleep"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_sleep"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_symptoms"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_symptoms"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_medication"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_medication"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_events"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_events"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_emotional"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_emotional"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_psychological"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_psychological"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_quest_gynecological"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quest_gynecological"
            android:inputType="textMultiLine|textCapSentences" />

    </LinearLayout>
</ScrollView>