<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.acpnctr.acpnctr.ObservationActivity">

        <EditText
            android:id="@+id/et_obs_behaviour"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_behaviour"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_tongue"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_tongue"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_lips"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_lips"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_limb"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_limb"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_meridian"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_meridian"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_morphology"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_morphology"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_nails"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_nails"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_skin"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_skin"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_hairiness"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_hairiness"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_complexion"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_complexion"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/et_obs_eyes"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs_eyes"
            android:inputType="textMultiLine|textCapSentences" />

    </LinearLayout>

</ScrollView>
