<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acpnctr.acpnctr.AuscultationActivity">

    <EditText
        android:id="@+id/et_ausc_blood_pressure"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:hint="@string/ausc_blood_pressure"/>

    <EditText
        android:id="@+id/et_ausc_abdomen"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:hint="@string/ausc_abdomen"/>

    <EditText
        android:id="@+id/et_ausc_smell"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:hint="@string/ausc_smell"/>

    <EditText
        android:id="@+id/et_ausc_breathing"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:hint="@string/ausc_breathing"/>

    <EditText
        android:id="@+id/et_ausc_cough"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:hint="@string/ausc_cough"/>

    <EditText
        android:id="@+id/et_ausc_voice"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:hint="@string/ausc_voice"/>

</LinearLayout>
