<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context="fragments.DiagnosisFragment">

        <!-- =========== -->
        <!-- = BA GANG = -->
        <!-- =========== -->
        <Button
            android:id="@+id/btn_add_bagang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_diag_bagang" />

        <!-- yin yang -->
        <RadioGroup
            android:id="@+id/rg_diag_bagang_yin_yang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_bagang_yin_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/diag_bagang_yin"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/rb_bagang_yang_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diag_bagang_yang"
                android:textAlignment="center" />

        </RadioGroup>

        <!-- deficiency excess  -->
        <RadioGroup
            android:id="@+id/rg_diag_bagang_def_excess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_bagang_deficiency_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/diag_bagang_deficiency"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/rb_bagang_excess_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diag_bagang_excess"
                android:textAlignment="center" />

        </RadioGroup>

        <!-- cold heat -->
        <RadioGroup
            android:id="@+id/rg_diag_bagang_cold_heat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_bagang_cold_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/diag_bagang_cold"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/rb_bagang_heat_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diag_bagang_heat"
                android:textAlignment="center" />

        </RadioGroup>

        <!-- interior exterior -->
        <RadioGroup
            android:id="@+id/rg_diag_bagang_int_ext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_bagang_interior_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/diag_bagang_interior"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/rb_bagang_exterior_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diag_bagang_exterior"
                android:textAlignment="center" />

        </RadioGroup>

        <!-- ====================== -->
        <!-- = WU XING / 5 PHASES = -->
        <!-- ====================== -->
        <Button
            android:id="@+id/btn_add_wu_xing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/btn_diag_wu_xing" />

        <ImageView
            android:id="@+id/iv_diag_wuxing"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>