<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.acpnctr.acpnctr.PalpationActivity">

        <EditText
            android:id="@+id/et_palp_abdomen"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/palp_abdomen"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/et_palp_meridian"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/palp_meridian"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/et_palp_point"
            style="@style/FragmentEditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/palp_point"
            android:inputType="textMultiLine" />

    </LinearLayout>
</ScrollView>
